# airflow

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.ci  README.md  buildspec.yml  constraints-3.10.txt  constraints-3.11.txt  constraints-no-providers-3.10.txt  constraints-no-providers-3.11.txt  constraints-source-providers-3.10.txt  constraints-source-providers-3.11.txt  dhi_python_packages.md  setup.cfg  setup.py
.devcontainer/postgres/: devcontainer.json
.github/: CODEOWNERS
.github/actions/breeze/: action.yml
.github/actions/install-prek/: action.yml
.github/actions/prepare_breeze_and_image/: action.yml
.github/actions/prepare_single_ci_image/: action.yml
.github/actions/stash-s3-restore/: action.yml
.github/actions/stash-s3-save/: action.yml
.github/workflows/: additional-ci-image-checks.yml  additional-prod-image-tests.yml  airflow-distributions-tests.yml  airflow-e2e-tests.yml  asf-allowlist-check.yml  automatic-backport.yml  backport-cli.yml  basic-tests.yml  check-newsfragment-pr-number.yml  ci-amd.yml  ci-arm.yml  ci-image-build.yml  ci-image-checks.yml  ci-notification.yml  codeql-analysis.yml  e2e-flaky-tests-report.yml  finalize-tests.yml  generate-constraints.yml  helm-tests.yml  integration-system-tests.yml  k8s-tests.yml  milestone-tag-assistant.yml  notify-uv-lock-conflicts.yml  prod-image-build.yml  publish-docs-to-s3.yml  push-image-cache.yml  recheck-old-bug-report.yml  registry-backfill.yml  registry-build.yml  registry-tests.yml  release_dockerhub_image.yml  release_single_dockerhub_image.yml  run-unit-tests.yml  scheduled-verify-release-calendar.yml  stale.yml  test-providers.yml  ui-e2e-tests.yml  update-constraints-on-push-stable.yml  update-constraints-on-push.yml  upgrade-check.yml
airflow-core/docs/administration-and-deployment/: lineage.rst
airflow-core/newsfragments/: 27.significant.rst
airflow-core/src/airflow/dag_processing_rust/: Cargo.toml  README.md  diesel.toml
airflow-core/src/airflow/dag_processing_rust/src/: db.rs  main.rs  schema.rs
airflow-core/src/airflow/rust-jobs/: Cargo.toml
airflow-core/src/airflow/rust-jobs/src/: config.rs  database_callback_sink.rs  db_callback_request.rs  main.rs  models.rs  schema.rs  serialized_objects.rs  tokio_executor.rs
airflow-core/src/airflow/rust-scheduler/: Cargo.toml  diesel.toml
airflow-core/src/airflow/rust-scheduler/src/: main  main.rs  models.rs  schema.rs
airflow-e2e-tests/tests/airflow_e2e_tests/: conftest.py  constants.py
airflow/models/: skipmixin.py
airflow/operators/: python.py
airflow/providers/databricks/: provider.yaml
airflow/providers/google/: provider.yaml
airflow/providers/jdbc/: provider.yaml
airflow/providers/papermill/: provider.yaml
constraints/: README.md
dev/: retag_docker_images.py  zig_bench_vs_python.py  zig_dagproc_phase0.py  zig_declarative_poc.py  zig_dump_serialized.py  zig_verify_emit.py
dev/breeze/: README.md  SELECTIVE_CHECKS.md
dev/i18n/: check_translations_completeness.py
dev/provider_packages/: prepare_provider_packages.py
dev/zigdagproc/: README.md  breeze-processor.sh  build.zig  build.zig.zon  fallback.py  run.sh
docs/docker-stack/: build.rst
images/breeze/: output-commands-hash.txt
plugins/airflow-chatbot-plugin/: README.md  airflow_chatbot_plugin.py  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/ci/: install_breeze.sh  make_mnt_writeable.sh  move_docker_to_mnt.sh
scripts/docker/: entrypoint_ci.sh  install_os_dependencies.sh  install_os_dependencies_ci.sh
tests/serialization/: test_dag_serialization.py
(+100 files in other folders)
