[package]
name = "dag_processing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
pyo3 = { version = "0.25.1", features = ["chrono"] }
anyhow = "1.0.97"
walkdir = "2.3.3"
tokio = { version = "1.28.2", features = ["full"] }
notify = "8.0"
chrono = "0.4.40"
serde_json = "1.0.140"
