# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "rust-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
backon = "1.5.2"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2", features = ["chrono", "postgres", "64-column-tables", "serde_json", "uuid"] }
diesel-async = { version = "0.6.1", features = ["postgres", "deadpool"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }


[dev-dependencies]
env_logger = "0.11.8"
mockall = "0.13.0"
