[package]
name = "rust-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossbeam = "0.8"
diesel = { version = "2.2.8", features = ["chrono", "postgres", "64-column-tables", "serde_json", "uuid"] }
env_logger = "0.11.7"
log = "0.4.26"
signal-hook = "0.3.17"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal", "english"] }
url = "2.5.4"
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
crossbeam-deque = "0.8.6"
pyo3 = {version = "0.23.3", features = ["auto-initialize"]}
pythonize = {version = "0.23.0"}
